--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -75,7 +75,7 @@
                 <p style="text-align: center;text-indent:2em; " >-CSAC-2020</p>
                 <hr/>
                 <p style="text-indent:2em; line-height:150%;"  >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
-                    &emsp; &emsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
+                    &emsp; &emsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为45分钟。报告主题涵盖: 密码算法软硬件实现与安全防护，5G/6G通信与安全，IoT与安全，自动驾驶与安全，人工智能与安全，数据库与安全，卫星通信与安全，网络攻击与防护，可信计算与安全，无人机与安全。热烈欢迎您莅临指导、交流和探讨。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div>
@@ -210,49 +210,49 @@
                         <tr><td colspan="4">08月29日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
                         <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td>待定</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>物联网安全技术</td><td>秦志光</td></tr>
-                        <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>RFID相关的底层架构</td><td>鲁&emsp;力</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:15 - 10:10</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>物联网安全技术</td><td>秦志光</td></tr>
+                        <tr><td>10:45- 10:55</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:40 - 12:25</td><td>RFID相关的底层架构</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
-                        <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td>硬件实现与安全</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
-                        <tr><td>17:00 - 17:50</td><td>算法硬件实现及其应用</td><td>待定</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:45 - 15:30</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
+                        <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>15:40 - 16:25</td><td>硬件实现与安全</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
+                        <tr><td>16:25 - 17:10</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
+                        <tr><td>17:10 - 17:55</td><td>算法硬件实现及其应用</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>硬件安全</td><td>杨博翰</td><td>待定</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td>硬件安全</td><td>待定</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
-                        <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>硬件安全</td><td>杨博翰</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:15 - 10:00</td><td>硬件安全</td><td>待定</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
+                        <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:40 - 12:25</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
-                        <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>智能驾驶技术与应用</td><td>杨&emsp;明</td></tr>
-                        <tr><td>17:00 - 17:50</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:45 - 15:30</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
+                        <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>15:40 - 16:25</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">待定</td></tr>
+                        <tr><td>16:25 - 17:10</td><td>智能驾驶技术与应用</td><td>杨&emsp;明</td></tr>
+                        <tr><td>17:10 - 17:55</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>芯片和EDA</td><td>陈晓明</td><td>待定</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>机器人触觉感知</td><td>李&emsp;强</td></tr>
-                        <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>可信计算及其发展</td><td>待定</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>芯片和EDA</td><td>陈晓明</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:15 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>机器人触觉感知</td><td>李&emsp;强</td></tr>
+                        <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:40 - 12:20</td><td>可信计算及其发展</td><td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
-                        <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>5G通信及其应用</td><td>待定</td></tr>
-                        <tr><td>17:00 - 17:50</td><td>A Survey of Physical Layer Security Techniques for 5G Wireless Networks and Challenges Ahead</td><td>吴泳澎</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:45 - 15:30</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
+                        <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>15:40 - 16:25</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td><td rowspan="3">待定</td></tr>
+                        <tr><td>16:25 - 17:10</td><td>5G通信及其应用</td><td>待定</td></tr>
+                        <tr><td>17:10 - 17:55</td><td>A Survey of Physical Layer Security Techniques for 5G Wireless Networks and Challenges Ahead</td><td>吴泳澎</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         </tbody>
                     </table>
