--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
+                    <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                     <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
                      <hr>
                     <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. We have invited a group of professors and researchers in information science to join DFSC.<br/>
