--- a/Member Lin.html
+++ b/Member Lin.html
@@ -115,6 +115,8 @@ date.setTime(date.getTime() - skew)
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
+                    <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                     <p style="text-align: center;font-size: 25px">Dr. Linzhi Jiang, University of Surrey, SCCS, Guildford, UK</p>
                     <hr>
                     <table>
