--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -220,12 +220,12 @@
                         <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:45 - 15:30</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:25</td><td>硬件实现与安全</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
+                        <tr><td>15:40 - 16:25</td><td>Designs and applications of highly reliable physically unclonable functions</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:25 - 17:10</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
                         <tr><td>17:10 - 17:55</td><td>算法硬件实现及其应用</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:15</td><td>硬件安全</td><td>杨博翰</td><td>待定</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:15 - 10:00</td><td>硬件安全</td><td>待定</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
