--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -222,7 +222,7 @@
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>Designs and applications of highly reliable physically unclonable functions</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:25 - 17:10</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
-                        <tr><td>17:10 - 17:55</td><td>算法硬件实现及其应用</td><td>待定</td></tr>
+                        <tr><td>17:10 - 17:55</td><td>Physical Unclonable Function (PUF) – The Future Technology for IoT Security</td><td>谷翀燕</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td>待定</td></tr>
