--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -240,7 +240,7 @@
                         <tr><td>17:10 - 17:55</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:15</td><td>芯片和EDA</td><td>陈晓明</td><td rowspan="3">待&emsp;定</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>芯片和EDA</td><td>陈晓明</td><td rowspan="3">徐&emsp;鹏</td></tr>
                         <tr><td>&nbsp;9:15 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>机器人触觉感知</td><td>李&emsp;强</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
