--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -210,8 +210,8 @@
                         <tr><td colspan="4">08月29日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
                         <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:15</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td rowspan="3">胡&emsp;磊</td></tr>
-                        <tr><td>&nbsp;9:15 - 10:10</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td>蒋林智</td></tr>
+                        <tr><td>&nbsp;9:15 - 10:10</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td><td rowspan="2">胡&emsp;磊</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>物联网安全技术</td><td>秦志光</td></tr>
                         <tr><td>10:45- 10:55</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:55 - 11:40</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
