--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -225,7 +225,7 @@
                         <tr><td>17:10 - 17:55</td><td>Physical Unclonable Function (PUF) – The Future Technology for IoT Security</td><td>谷翀燕</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td rowspan="3">待&emsp;定</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td rowspan="3">付安民</td></tr>
                         <tr><td>&nbsp;9:15 - 10:00</td><td>硬件安全</td><td>待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
