--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -250,7 +250,7 @@
                         <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:45 - 15:30</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:25</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td><td rowspan="3">待定</td></tr>
+                        <tr><td>15:40 - 16:25</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td><td rowspan="3">田海博</td></tr>
                         <tr><td>16:25 - 17:10</td><td>5G通信及其应用</td><td>待定</td></tr>
                         <tr><td>17:10 - 17:55</td><td>A Survey of Physical Layer Security Techniques for 5G Wireless Networks and Challenges Ahead</td><td>吴泳澎</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
