--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -229,7 +229,7 @@
                         <tr><td>&nbsp;9:15 - 10:00</td><td>硬件安全</td><td>待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">待定</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">史&emsp;扬</td></tr>
                         <tr><td>11:40 - 12:25</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
