--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -244,7 +244,7 @@
                         <tr><td>&nbsp;9:15 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>机器人触觉感知</td><td>李&emsp;强</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:55 - 11:40</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">待定</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">林璟锵</td></tr>
                         <tr><td>11:40 - 12:20</td><td>可信计算及其发展</td><td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">待定</td></tr>
