--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -247,7 +247,7 @@
                         <tr><td>10:55 - 11:40</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">林璟锵</td></tr>
                         <tr><td>11:40 - 12:20</td><td>可信计算及其发展</td><td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">沈&emsp;剑</td></tr>
                         <tr><td>14:45 - 15:30</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td><td rowspan="3">田海博</td></tr>
