--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -232,7 +232,7 @@
                         <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">史&emsp;扬</td></tr>
                         <tr><td>11:40 - 12:25</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:45</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">蒋林智</td></tr>
                         <tr><td>14:45 - 15:30</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">付章杰</td></tr>
