--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -217,7 +217,7 @@
                         <tr><td>10:55 - 11:40</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td><td rowspan="2">许春根</td></tr>
                         <tr><td>11:40 - 12:25</td><td>RFID相关的底层架构</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">李&emsp;鹤</td></tr>
                         <tr><td>14:45 - 15:30</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>Designs and applications of highly reliable physically unclonable functions</td><td>荘恺莘</td><td rowspan="3">蒋林智</td></tr>
