--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -227,7 +227,7 @@
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td rowspan="3">付安民</td></tr>
                         <tr><td>&nbsp;9:15 - 10:00</td><td>Custom Hardware: from Microarchitecture to Supercomputer</td><td>李&emsp;鹤</td></tr>
-                        <tr><td>&nbsp;10:00- 10:45</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>密文大数据库的可验证更新技术</td><td>陈晓峰</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">史&emsp;扬</td></tr>
                         <tr><td>11:40 - 12:25</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
