--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -244,7 +244,7 @@
                         <tr><td>&nbsp;9:15 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>Glimpse of Tactile Robotics</td><td>李&emsp;强</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:55 - 11:40</td><td>待定</td><td>待定</td><td rowspan="2">林璟锵</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>量子安全多方计算</td><td>曹浩</td><td rowspan="2">林璟锵</td></tr>
                         <tr><td>11:40 - 12:20</td><td>中国可信计算3.0发展与创新</td><td>公&emsp;备</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">沈&emsp;剑</td></tr>
