--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -218,7 +218,7 @@
                         <tr><td>11:40 - 12:25</td><td>RFID相关的底层架构</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">李&emsp;鹤</td></tr>
-                        <tr><td>14:45 - 15:30</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
+                        <tr><td>14:45 - 15:30</td><td>5G/6G通信与应用</td><td>王尚广</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>Designs and applications of highly reliable physically unclonable functions</td><td>荘恺莘</td><td rowspan="3">蒋林智</td></tr>
                         <tr><td>16:25 - 17:10</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
@@ -244,7 +244,7 @@
                         <tr><td>&nbsp;9:15 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>Glimpse of Tactile Robotics</td><td>李&emsp;强</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:55 - 11:40</td><td>Quantum Secure Multiparty Computation with Symmetric Boolean Functions</td><td>曹浩</td><td rowspan="2">林璟锵</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>Quantum Secure Multiparty Computation with Symmetric Boolean Functions</td><td>曹&emsp;浩</td><td rowspan="2">林璟锵</td></tr>
                         <tr><td>11:40 - 12:20</td><td>中国可信计算3.0发展与创新</td><td>公&emsp;备</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">沈&emsp;剑</td></tr>
