--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -237,12 +237,12 @@
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">付章杰</td></tr>
                         <tr><td>16:25 - 17:10</td><td>低速无人驾驶技术与应用</td><td>杨&emsp;明</td></tr>
-                        <tr><td>17:10 - 17:55</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
+                        <tr><td>17:10 - 17:55</td><td>Glimpse of Tactile Robotics</td><td>李&emsp;强</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:15</td><td>芯片和EDA</td><td>陈晓明</td><td rowspan="3">徐&emsp;鹏</td></tr>
                         <tr><td>&nbsp;9:15 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td></tr>
-                        <tr><td>&nbsp;10:00- 10:45</td><td>Glimpse of Tactile Robotics</td><td>李&emsp;强</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
                         <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:55 - 11:40</td><td>Quantum Secure Multiparty Computation with Symmetric Boolean Functions</td><td>曹&emsp;浩</td><td rowspan="2">林璟锵</td></tr>
                         <tr><td>11:40 - 12:20</td><td>中国可信计算3.0发展与创新</td><td>公&emsp;备</td></tr>
