--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -215,7 +215,7 @@
                         <tr><td>&nbsp;10:00- 10:45</td><td>物联网安全技术</td><td>秦志光</td></tr>
                         <tr><td>10:45- 10:55</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:55 - 11:40</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td><td rowspan="2">许春根</td></tr>
-                        <tr><td>11:40 - 12:25</td><td>RFID相关的底层架构</td><td>鲁&emsp;力</td></tr>
+                        <tr><td>11:40 - 12:25</td><td>Internet-of-Microchips: Direct Radio-to-Bus Communication with SPI Backscatter</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">李&emsp;鹤</td></tr>
                         <tr><td>14:45 - 15:30</td><td>5G/6G通信与应用</td><td>王尚广</td></tr>
