--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -109,7 +109,6 @@
                     <p align="left" style="text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
                     <p align="left">会议举办地点：中国 网络视频会议。<br/></p>
                     <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
-                    <p align="left">会议协办单位：金陵科技学院 网络空间安全学院。<br/></p>
                     <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>
                 </div>
 
@@ -210,14 +209,14 @@
                         <tr><td colspan="4">08月29日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
                         <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:15</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td>蒋林智</td></tr>
-                        <tr><td>&nbsp;9:15 - 10:10</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td><td rowspan="2">胡&emsp;磊</td></tr>
-                        <tr><td>&nbsp;10:00- 10:45</td><td>物联网安全技术</td><td>秦志光</td></tr>
-                        <tr><td>10:45- 10:55</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:55 - 11:40</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td><td rowspan="2">许春根</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td rowspan="2">蒋林智</td></tr>
+                        <tr><td>&nbsp;9:15 - 10:10</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td></tr>
+                            <tr><td>10:45- 10:55</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>物联网安全技术</td><td>秦志光</td><td rowspan="3">胡&emsp;磊</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td></tr>
                         <tr><td>11:40 - 12:25</td><td>Internet-of-Microchips: Direct Radio-to-Bus Communication with SPI Backscatter</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">李&emsp;鹤</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">许春根</td></tr>
                         <tr><td>14:45 - 15:30</td><td>5G/6G通信与应用</td><td>王尚广</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>Designs and applications of highly reliable physically unclonable functions</td><td>荘恺莘</td><td rowspan="3">蒋林智</td></tr>
@@ -225,11 +224,11 @@
                         <tr><td>17:10 - 17:55</td><td>Custom Hardware: from Microarchitecture to Supercomputer</td><td>李&emsp;鹤</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td rowspan="3">付安民</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td rowspan="2">田海博</td></tr>
                         <tr><td>&nbsp;9:15 - 10:00</td><td>Physical Unclonable Function (PUF) – The Future Technology for IoT Security</td><td>谷翀燕</td></tr>
-                        <tr><td>&nbsp;10:00- 10:45</td><td>密文大数据库的可验证更新技术</td><td>陈晓峰</td></tr>
-                        <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">史&emsp;扬</td></tr>
+                             <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>密文大数据库的可验证更新技术</td><td>陈晓峰</td><td rowspan="3">史&emsp;扬</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td></tr>
                         <tr><td>11:40 - 12:25</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">蒋林智</td></tr>
@@ -240,11 +239,11 @@
                         <tr><td>17:10 - 17:55</td><td>Glimpse of Tactile Robotics</td><td>李&emsp;强</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:15</td><td>芯片和EDA</td><td>陈晓明</td><td rowspan="3">徐&emsp;鹏</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:15</td><td>芯片和EDA</td><td>陈晓明</td><td rowspan="2">林璟锵</td></tr>
                         <tr><td>&nbsp;9:15 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td></tr>
-                        <tr><td>&nbsp;10:00- 10:45</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
-                        <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:55 - 11:40</td><td>Quantum Secure Multiparty Computation with Symmetric Boolean Functions</td><td>曹&emsp;浩</td><td rowspan="2">林璟锵</td></tr>
+                             <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
+                        <tr><td>&nbsp;10:00- 10:45</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td><td rowspan="2">徐&emsp;鹏</td></tr>
+                        <tr><td>10:55 - 11:40</td><td>Quantum Secure Multiparty Computation with Symmetric Boolean Functions</td><td>曹&emsp;浩</td></tr>
                         <tr><td>11:40 - 12:20</td><td>中国可信计算3.0发展与创新</td><td>公&emsp;备</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">沈&emsp;剑</td></tr>
