--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -125,10 +125,10 @@
                     <br/><br/>
                     <p class="organization">论坛程序委员会主席<br/></p>
                     <!--                        蒋林智（University of Surrey）林璟锵 张正<br/><br/>-->
-                    <p align="center">蒋林智（University of Surrey）林璟锵 张正<br/></p>
+                    <p align="center">蒋林智（University of Surrey）林璟锵<br/></p>
                     <br/>
                     <p align="center" class="organization">会议程序委员会<br/></p>
-                    <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;查达仁&emsp;蒙威志<br/></p>
+                    <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;罗聪余&emsp;蒙威志<br/></p>
                     <p align="center">付安民&emsp;田海博&emsp;黎&emsp;琳&emsp;付章杰&emsp;李&emsp;剑<br/></p>
                     <br/>
                     <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
@@ -217,25 +217,25 @@
                         <tr><td>11:40 - 12:25</td><td>Internet-of-Microchips: Direct Radio-to-Bus Communication with SPI Backscatter</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:45</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">许春根</td></tr>
-                        <tr><td>14:45 - 15:30</td><td>5G/6G通信与应用</td><td>王尚广</td></tr>
+                        <tr><td>14:45 - 15:30</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:25</td><td>Designs and applications of highly reliable physically unclonable functions</td><td>荘恺莘</td><td rowspan="3">蒋林智</td></tr>
-                        <tr><td>16:25 - 17:10</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
+                        <tr><td>16:25 - 17:10</td><td>Physical Unclonable Function (PUF) – The Future Technology for IoT Security</td><td>谷翀燕</td></tr>
                         <tr><td>17:10 - 17:55</td><td>Custom Hardware: from Microarchitecture to Supercomputer</td><td>李&emsp;鹤</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:15</td><td>Hardware enabled roots of trust</td><td>杨博翰</td><td rowspan="2">田海博</td></tr>
-                        <tr><td>&nbsp;9:15 - 10:00</td><td>Physical Unclonable Function (PUF) – The Future Technology for IoT Security</td><td>谷翀燕</td></tr>
+                        <tr><td>&nbsp;9:15 - 10:00</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
                              <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>密文大数据库的可验证更新技术</td><td>陈晓峰</td><td rowspan="3">史&emsp;扬</td></tr>
                         <tr><td>10:55 - 11:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td></tr>
                         <tr><td>11:40 - 12:25</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:45</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">蒋林智</td></tr>
-                        <tr><td>14:45 - 15:30</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td><td rowspan="2">蒋林智</td></tr>
+                        <tr><td>14:45 - 15:30</td><td>信息隐藏与人工智能安全</td><td>张卫明</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:25</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">付章杰</td></tr>
-                        <tr><td>16:25 - 17:10</td><td>低速无人驾驶技术与应用</td><td>杨&emsp;明</td></tr>
+                        <tr><td>15:40 - 16:25</td><td>低速无人驾驶技术与应用</td><td>杨&emsp;明</td><td rowspan="3">付章杰</td></tr>
+                        <tr><td>16:25 - 17:10</td><td>进化计算与人工智能</td><td>金耀初</td></tr>
                         <tr><td>17:10 - 17:55</td><td>Glimpse of Tactile Robotics</td><td>李&emsp;强</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
@@ -244,14 +244,14 @@
                              <tr><td>10:45 - 10:55</td><td colspan="3">茶歇</td></tr>
                         <tr><td>&nbsp;10:00- 10:45</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td><td rowspan="2">徐&emsp;鹏</td></tr>
                         <tr><td>10:55 - 11:40</td><td>Quantum Secure Multiparty Computation with Symmetric Boolean Functions</td><td>曹&emsp;浩</td></tr>
-                        <tr><td>11:40 - 12:20</td><td>中国可信计算3.0发展与创新</td><td>公&emsp;备</td></tr>
+                        <tr><td>11:40 - 12:20</td><td>A Survey of Physical Layer Security Techniques for 5G Wireless Networks and Challenges Ahead</td><td>吴泳澎</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:45</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">沈&emsp;剑</td></tr>
-                        <tr><td>14:45 - 15:30</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
+                        <tr><td>14:00 - 14:45</td><td>中国可信计算3.0发展与创新</td><td>公&emsp;备</td><td rowspan="2">沈&emsp;剑</td></tr>
+                        <tr><td>14:45 - 15:30</td><td>可信计算与人工智能</td><td>沈&emsp;超</td></tr>
                         <tr><td>15:30 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:25</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td><td rowspan="3">田海博</td></tr>
+                        <tr><td>15:40 - 16:25</td><td>5G/6G通信与应用</td><td>王尚广</td><td rowspan="3">田海博</td></tr>
                         <tr><td>16:25 - 17:10</td><td>A Survey on Security Aspects for 3GPP 5G Networks</td><td>曹&emsp;进</td></tr>
-                        <tr><td>17:10 - 17:55</td><td>A Survey of Physical Layer Security Techniques for 5G Wireless Networks and Challenges Ahead</td><td>吴泳澎</td></tr>
+                        <tr><td>17:10 - 17:55</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         </tbody>
                     </table>
