--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -93,7 +93,7 @@
                     <p align="center">张福泰&nbsp&nbsp付玉龙&nbsp&nbsp徐&emsp;鹏&nbsp&nbsp杨&emsp;侃&nbsp&nbsp贾春福&nbsp&nbsp陈晓峰&nbsp&nbsp李&emsp;进&nbsp&nbsp沈&emsp;剑&nbsp&nbsp李小勇&nbsp&nbsp李舟军<br/></p>
                     <br/><br/>
                     <p class="organization">论坛程序委员会主席<br/></p>
-                    <!--                        蒋林智（University of Surrey）林璟锵 张正<br/><br/>-->
+                    <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
                     <p align="center">蒋林智（University of Surrey）林璟锵<br/></p>
                     <br/>
                     <p align="center" class="organization">会议程序委员会<br/></p>
@@ -176,7 +176,6 @@
                     <p align="left" style="text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
                     <p align="left">会议举办地点：中国 网络视频会议。<br/></p>
                     <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
-                    <p align="left">会议协办单位：金陵科技学院 网络空间安全学院。<br/></p>
                     <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>
                 </div>
                 <div id="main3" >
