--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -35,7 +35,7 @@
 						height: 50px;
 						font-family: Microsoft Yahei;
 						line-height: 50px;
-						background-color: skyblue;
+/* 						background-color: skyblue; */
 						margin: 0px 0px;
 						color: skyblue;
 						text-align: center;
