--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -47,7 +47,7 @@
 					}
 	</style>
 </head>
-<body>
+<body background="http://www.xiaohongshu.com/discovery/item/58b268a3d5945f267a30edd4">
     <div >
         <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
