--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <hr>
                     <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposium,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has been built a series of co-operations with Universities/Colleges/Schools and Enterprises.<br/>
                     <p style="text-indent:2em ">We also provide <a href="courses.html">online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Difference of Privacy, Secure Multi-party Computation, AI and IoT etc. <br/> 
-                    <p <a href="SHDI Introduction.html">SHDI Symposium></a></p>
+                    <p ><a href="SHDI Introduction.html">SHDI Symposium</a></p>
                     <hr>
                     
                     <p style="text-indent:2em ">Conferences Sponsors: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
