--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-                                    <a href="SHDI Introduction.html">SHDI</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="SMPC Introduction.html">SMPC</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="QPQC Introduction.html">QPQC</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="CSAC Introduction.html">CSAC</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="CC Introduction.html">CC</a>
-                                </li>
+					<a href=""> comference</a>
+				<div class="dropdown_1column">
+				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
+				<div class="col_1">
+				 <ul class="simple">
+				     <li><a href="SHDI Introduction.html">SHDI</a></li>
+				     <li><a href="SMPC Introduction.html">SMPC</a></li>
+				     <li><a href="QPQC Introduction.html">QPQC</a></li>
+				     <li><a href="CSAC Introduction.html">CSAC</a></li>
+				     <li><a href="CC Introduction.html">CC</a></li>
+				</ul>
+			</div>
+	           </div>
+	       </li>
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
