--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
 				<div class="col_1">
 				 <ul class="conference">
-				     <li class="comference"><a href="SHDI Introduction.html">SHDI</a></li>
-				     <li class="comference"><a href="SMPC Introduction.html">SMPC</a></li>
-				     <li class="comference"><a href="QPQC Introduction.html">QPQC</a></li>
-				     <li class="comference"><a href="CSAC Introduction.html">CSAC</a></li>
-				     <li class="comference"><a href="CC Introduction.html">CC</a></li>
+				     <li class="conference"><a href="SHDI Introduction.html">SHDI</a></li>
+				     <li class="conference"><a href="SMPC Introduction.html">SMPC</a></li>
+				     <li class="conference"><a href="QPQC Introduction.html">QPQC</a></li>
+				     <li class="conference"><a href="CSAC Introduction.html">CSAC</a></li>
+				     <li class="conference"><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</div>
 	           </div>
