--- a/BL syllabus.html
+++ b/BL syllabus.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    
 </head>
     
     <script language=JavaScript>
@@ -83,20 +84,21 @@ date.setTime(date.getTime() - skew)
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-                                    <a href="SHDI Introduction.html">SHDI</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="SMPC Introduction.html">SMPC</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="QPQC Introduction.html">QPQC</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="CSAC Introduction.html">CSAC</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="CC Introduction.html">CC</a>
-                                </li>
+					<a href=""> conference</a>
+				<div class="dropdown_1column">
+				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
+				<div class="col_1">
+				 <ul class="conference">
+				     <li class="conference"><a href="SHDI Introduction.html">SHDI</a></li>
+				     <li class="conference"><a href="SMPC Introduction.html">SMPC</a></li>
+				     <li class="conference"><a href="QPQC Introduction.html">QPQC</a></li>
+				     <li class="conference"><a href="CSAC Introduction.html">CSAC</a></li>
+				     <li class="conference"><a href="CC Introduction.html">CC</a></li>
+				</ul>
+			</div>
+	           </div>
+	       </li>
+
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
