--- a/SMPC-2020.html
+++ b/SMPC-2020.html
@@ -81,15 +81,15 @@
 				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
 				<div class="col_1">
 				 <ul class="Conference">
-				     <li class="Conference"><a href="SHDI Introduction.html">SHDI</a><\li>
-				     <li class="Conference"><a href="SMPC Introduction.html">SMPC</a><\li>
-				     <li class="Conference"><a href="QPQC Introduction.html">QPQC</a><\li>
-				     <li class="Conference"><a href="CSAC Introduction.html">CSAC</a><\li>
-				     <li class="Conference"><a href="CC Introduction.html">CC</a><\li>
+				     <li class="Conference"><a href="SHDI Introduction.html">SHDI</a></li>
+				     <li class="Conference"><a href="SMPC Introduction.html">SMPC</a></li>
+				     <li class="Conference"><a href="QPQC Introduction.html">QPQC</a></li>
+				     <li class="Conference"><a href="CSAC Introduction.html">CSAC</a></li>
+				     <li class="Conference"><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</div>
 	           </div>
-	       <\li>
+	       </li>
 
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
