--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
 			display:none; /*不再设置为块状显示效果*/
 			height:auto;
-			width: auto;
+			width: left;
 			position:absolute;
 			width:130px;
 			z-index:200;
