--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
 			display:none; /*不再设置为块状显示效果*/
 			height:auto;
-			width: left;
+			width: auto;
 			position:absolute;
-			width:5px;
+			width:60px;
 			z-index:200;
 			margin:0px;
 			list-style-type: none;
