--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
 	.navbar-collapse li ul{
-			background:white; /*设置二级菜单背景色*/
+/* 			background:white; 设置二级菜单背景色 */
 			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
 			display:none; /*不再设置为块状显示效果*/
 			height:auto;
 			width: auto;
 			position:absolute;
-			width:60px;
+			width:1000px;
 			z-index:200;
 			margin:0px;
 			list-style-type: none;
