--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -54,7 +54,7 @@
 			height:auto;
 			width: auto;
 			position:absolute;
-			width:1000px;
+			width:100px;
 			z-index:200;
 			margin:0px;
 			list-style-type: none;
@@ -62,6 +62,16 @@
 		.navbar-collapse li:hover ul{
 			display:block;	/*鼠标移动到上面的时候为块状显示。*/
 		}
+		#footer {
+	    background-color:skyblue;
+	    color:white;
+	    clear:both;
+	    text-align:center;
+	    padding:5px; 
+		border-style: groove;
+		border-color: aqua;
+		border-radius: 20px;
+	}
 	</style>
 
 </head>
@@ -113,10 +123,12 @@
                        <p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"  style="width: 210px; height: 213px; " ></a> <br/>
                 <p style="text-indent:2em ">Security multi-party computation is an important method to protect privacy of users, and is research hot. SMPC symposium would like to invite the well-known researchers all over the world to share their works about smpc theory and applications. Everyone, who does the best works on SMPC, will be invited to attend SMPC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; Invited talks including the following aspects: (1) SMPC theory and developments; (2) SMPC in post-quantum world; (3) Quantum SPMC; (4) SMPC applications.<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2017.html">SMPC Symposium-2017</a> <br/>
+                    <div id="footer">
+		    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2017.html">SMPC Symposium-2017</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2018.html">SMPC Symposium-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2019.html">SMPC Symposium-2019</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2020.html">SMPC Symposium-2020</a> <br/>
+		    </div>
                 </p>
             </div> 
             </div>
