--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -54,7 +54,7 @@
 			height:auto;
 			width: auto;
 			position:absolute;
-			width:1000px;
+			width:100px;
 			z-index:200;
 			margin:0px;
 			list-style-type: none;
@@ -62,7 +62,16 @@
 		.navbar-collapse li:hover ul{
 			display:block;	/*鼠标移动到上面的时候为块状显示。*/
 		}
-
+		#footer {
+	    background-color:skyblue;
+	    color:white;
+	    clear:both;
+	    text-align:center;
+	    padding:5px; 
+		border-style: groove;
+		border-color: aqua;
+		border-radius: 20px;
+	}
 	</style>
 </head>
 <body>
@@ -116,12 +125,14 @@
                     &nbsp; &nbsp; &nbsp; &nbsp; QPQC symposium would like to invit well-known researchers all over the world to present their best works (QPC and QC)about state-of-art, research trends and applications on PQC and QC. Everyone, who does the best works on above fields, will be invited to attend QPQC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
+			</p>
+			<div id="footer">
                      &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2016.html">QPQC Symposiu-2016</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2017.html">QPQC Symposiu-2017</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2018.html">QPQC Symposiu-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2019.html">QPQC Symposiu-2019</a> <br/>
                      &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2020.html">QPQC Symposiu-2020</a> <br/>
-                </p>
+		    </div>
             </div> 
             </div>
            
